--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@ OBJ_DIR  = ./objs
 CFLAGS = -Wall -Wextra -Werror -g
 INCLUDES = -I includes
 
-SRCS = ft_atoi.c ft_atoi_base.c ft_array_size.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c \
+SRCS = ft_atoi.c ft_atoi_base.c ft_array_size.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c ft_is_whitespace.c \
 ft_itoa.c ft_memalloc.c ft_memccpy.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memdel.c ft_memmove.c ft_memset.c \
 ft_nbrlen_base.c ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putstr_fd.c ft_split.c ft_strchr.c ft_strcmp.c \
 ft_strdel.c ft_strdup.c ft_strfdup.c ft_strfjoin.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c \
