--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,20 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "(gdb) Lancer",
+			"name": "(gdb) Attach",
 			"type": "cppdbg",
-			"request": "launch",
+			"request": "attach",
 			"program": "${workspaceFolder}/minishell",
-			"args": [],
-			"stopAtEntry": false,
-			"cwd": "${fileDirname}",
-			"environment": [],
-			"externalConsole": false,
+			"processId": "235181",
 			"MIMode": "gdb",
 			"setupCommands": [
 				{
-					"description": "Activer l'impression en mode Pretty pour gdb",
+					"description": "Enable pretty-printing for gdb",
 					"text": "-enable-pretty-printing",
 					"ignoreFailures": true
 				},
 				{
-					"description":  "Définir la version désassemblage sur Intel",
+					"description":  "Set Disassembly Flavor to Intel",
 					"text": "-gdb-set disassembly-flavor intel",
 					"ignoreFailures": true
 				}
