--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@ OBJ_DIR  = ./objs
 CFLAGS = -Wall -Wextra -Werror -g
 INCLUDES = -I includes
 
-SRCS = ft_atoi.c ft_atoi_base.c ft_array_size.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c \
+SRCS = ft_atoi.c ft_atoi_base.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c \
 ft_itoa.c ft_memalloc.c ft_memccpy.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memdel.c ft_memmove.c ft_memset.c \
 ft_nbrlen_base.c ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putstr_fd.c ft_split.c ft_strchr.c ft_strcmp.c \
 ft_strdel.c ft_strdup.c ft_strfdup.c ft_strfjoin.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c \
@@ -15,7 +15,7 @@ ft_rev_int_tab.c ft_sort_int_tab.c ft_str_isdigit.c ft_strfjoinchar.c pf_conv_c.
 pf_conv_s.c pf_conv_p.c pf_conv_d_i.c pf_conv_u.c pf_conv_x.c pf_conv_mx.c pf_conv_percent.c pf_convert.c pf_fill_nb.c\
 pf_isflag.c pf_ft_printf.c pf_init.c pf_insert_into_buffer.c pf_main_loop.c pf_parse_printf.c \
 ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c	ft_lstmap.c  ft_lstnew.c  ft_lstsize.c \
-ft_printerror.c
+ft_printerror.c ft_tab_display.c ft_tab_free.c ft_tab_size.c ft_tab_to_lst.c
 
 OBJS  = ${addprefix ${OBJ_DIR}/,${SRCS:%.c=%.o}}
 
