by nfauconn at 23/07/2022 01h05 CEST

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -144,7 +144,7 @@ ${BUILD_DIR}/%.o: %.c
 	@${COMP} -MMD ${INCLUDES} -o $@ -c $<
 
 clean:
-	@${RM} ${OBJS}
+	@${RM} ${BUILD_DIR}
 
 fclean: clean
 	@${RM} ${NAME}
