fixed the strange bug : dans expand_string, on appelait realloc au lieu de realloc_str (on avait corrige realloc_str mais pas realloc --) du coup j'ai supprime realloc et fait un tout beau realloc stre

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -86,7 +86,7 @@ SRCS := ${addsuffix ${S_EXT}, ${addprefix ${SRC_DIR}/, \
 		ft_calloc \
 		ft_memalloc \
 		ft_memdel \
-		ft_realloc \
+		ft_realloc_str \
 		ft_replacefree \
 		ft_strarrayclear \
 		ft_strdel} \
