ft_lsttostrarray added

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -43,6 +43,7 @@ SRCS := ${addsuffix ${S_EXT}, ${addprefix ${SRC_DIR}/, \
 		ft_atoi \
 		ft_atoi_base \
 		ft_itoa \
+		ft_lsttostrarray \
 		ft_split \
 		ft_strarraytolist \
 		ft_ulltoa_base} \
